Copyright footer on home page will no longer display on smaller video widths

--- a/style.css
+++ b/style.css
@@ -522,14 +522,6 @@ gallerysubtitle a:hover {
 
 @media (max-width: 550px) {
     .copyrightDiv {
-        font-size: 9pt !important;
-        height: auto !important;
-    }
-}
-
-@media (max-width: 400px) {
-    .copyrightDiv {
-        font-size: 8pt !important;
-        height: auto !important;
+        display: none;
     }
 }
